Fix: Exceptions and allow saving
- Allow saving Buchungsart without "Steuer Buchungsart"
- Show "Steuer Buchungsart" in Dropdown even if spenden is NULL in DB
- Fix exception in BuchungsklasseSaldoList
- Reduce SQL queries in BuchungsklasseSaldoList
- Remove unused imports